[workspace]
resolver = "2"
members = [
    "games/*"
]

# This is the configuration i use in this project. 
# Feel free to change the configuration or you can just delete it entirely
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
